# demo-uca-isilon-python

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  justfile  pyproject.toml
src/demo/: demo.ipynb  demo.py  demo_mounted.ipynb  demo_mounted.py  demo_s3.ipynb  demo_s3.py  prepare_files.py
